[FindBugs] 1. Replaced string concatenations in loops with StringBuffer. 2. Explicit handling of return values denoting success and failure. 3. Replaced 'new Integer/Character/Long' with 'Integer/Character/Long.valueOf'. 4. Eliminated unused fields.